[project]
name = "load-test"
version = "0.1.0"
description = "Load testing tool for stress testing websites"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "locust>=2.43.3"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # Base error & import checks
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "S",  # bandit
    "D",  # docstring check

    # Strictness / correctness
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ANN",    # type annotations
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "SLF",    # flake8-self
    "PL",     # Pylint-ish checks
    "RUF",    # Ruff-specific rules
]

ignore = [
    # Incompatible pydocstyle pairs: pick one style from each.
    "D203", # prefer D211 (no blank line before class docstring)
    "D213", # prefer D212 (multi-line summary on first line)
]

[tool.ruff.format]
docstring-code-line-length = 120

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
